Added a new page for Foothill Flyers, and updated chapter and page numbers to accommodate new page. Added seo titling and descriptions.

--- a/src/pages/bert_riggall_website.html
+++ b/src/pages/bert_riggall_website.html
@@ -1,12 +1,12 @@
 ---
-title: Chapter Three; Bert Riggall's Greater Waterton, A Conservation Legacy - Book Website
+title: Chapter Four; Bert Riggall's Greater Waterton
 description: Creation of the website for the book, Bert Riggall's Greater Waterton
 ---
 
             <article class="subpage__left">
 
                   <div class="subpage__left_contents">
-                    <div class="subpage__left_chapter">Chapter Three</div>
+                    <div class="subpage__left_chapter">Chapter Four</div>
                     <h1>Bert Riggall's Greater Waterton, <br />A Conservation Legacy</h1>
                     <h2>Book</h2>
 
@@ -31,7 +31,7 @@ description: Creation of the website for the book, Bert Riggall's Greater Watert
 
             <footer>
                   <div class="subpage__page_number_hedera">
-                        <div>p. 6</div>
+                        <div>p. 8</div>
                         <button class="top-button" aria-label="Back to top" type="button"><span aria-hidden="true">&#10087</span></button>
                   </div>
             </footer>
