--- a/src/pages/introduction_sarah_k_russell.html
+++ b/src/pages/introduction_sarah_k_russell.html
@@ -1,18 +1,18 @@
 ---
-title:
-description:
+title: Chapter One; Introduction to the Website Developer; Sarah K. Russell
+description: The inspiration for this website build. How I became a wedsite developer over 16 years ago at the University of Alberta
 ---
 
 <article class="subpage__left">
 
       <div class="subpage__left_contents">
             <div class="subpage__left_chapter">Chapter One</div>
-            <h1>Introduction to the Website Developer &mdash; </h1>
+            <h1>Introduction to the<br />Website Developer;</h1>
             <h2>Sarah K. Russell</h2>
 
-            <p>I have been building websites and learning for over 16 years. I say, learning, because this wonderful industry is always coming up with new and better ways of building sites. To build sites is to be constantly learning new things and finding how you can best apply them. All the while making sure you give the user the best experience you can. It is the perfect industry for someone always looking for a fun new challenge.</p>
+            <p>I have been learning and working professionally building websites over 16 years. I say, learning, because this wonderful industry is always coming up with new and better ways of building websites. To build websites is to be constantly learning new things and finding how you can best apply them. All the while making sure you give the user the best experience you can. It is the perfect industry for someone always looking for a fun new challenge. Within my 16 years I have relearned how to build websites with the big changes we've experience; tables and fixed width to floating divs, responsive building and mobile first to the newest innovation we get to play with today &mdash; CSS Flexbox and CSS Grid.</p>
 
-            <p>I fell in love with web development in my last year at the University of Alberta. I needed an extra studio course for my Fine Arts &mdash; Visual Communications Degree and signed up. Before I knew it, I was at the top of my class, it all just made sense to me. I had found a language to love.</p>
+            <p>I fell in love with web development in my last year at the University of Alberta, Canada. I needed an extra studio course to complete my Fine Arts &mdash; Visual Communications Design Degree and signed up. Before I knew it, I was at the top of my class! It all just clicked. I had found these new and ever changing languages to love.</p>
       </div>
 
 </article>
@@ -21,11 +21,11 @@ description:
 
       <div class="subpage__right_contents" id="right_contents_text">
         <h3>This Site</h3>
-        <p>Growing up in South Carolina there was a small, three room library just down the block from our house. This was before the internet. When I wanted to learn about something, I would run down to the library and dive into all the books I could get my hands on whatever new subject had tickled my fancy. I think this is where I also found a connection with the internet &mdash; the internet is a library anyone can access from anywhere.</p>
+        <p>Growing up in South Carolina there was a small, three room library just down the block from our house. This was before the internet, so when I wanted to learn about something, I would run down to the library and dive into all the books I could get my hands on whatever new subject had tickled my fancy. This eagerness to jump into new areas of interest would eventually lead me to make a connection with the internet and build my career around it. The internet allows anyone to access information on anything - it's just as precious to me now as my little blue library card was to me all those years ago.</p>
 
-        <p>In 2019 this portfolio site has been rebuilt to pay homage to those days in the library surrounded by glorious &mdash; books. Books and websites are very much the same &mdash; a medium for information or telling a story. This sites' format allowed me to focus on the graghic design of the page structure with a emphasis on typograghy.</p>
+        <p>In 2019 this portfolio site has been rebuilt to pay homage to those days in the library surrounded by glorious &mdash; books. Books and websites are very much the same &mdash; a medium for information or telling a story. The site format allowed me to focus on the graphic design of the page structure with a emphasis on typography.</p>
 
-        <p><em>This responsive site was built with a Foundation base, the homepage is a Flexbox layout while the interior page layout was more suited to CSS Grid.</em></p>
+        <p><em>This mobile first, responsive site was built with a Foundation base, the homepage is a Flexbox layout while the interior page layout was more suited to CSS Grid.</em></p>
 
         <ul class="subpage__right_contents_list">
           <li><p>Contact: <a href="mailto:info@skrdesign.com?subject=Inquiry%20From%20SKRDesign%20Site">info@skrdesign.com</a></p></li>
