--- a/src/pages/linda_anderson_stewart_website.html
+++ b/src/pages/linda_anderson_stewart_website.html
@@ -1,23 +1,22 @@
 ---
-title:
-description:
+title: Chapter Five; Linda Anderson Stewart, B.F.A - Fine Art Painter
+description: Background into the building of the painters' website
 ---
 
 <article class="subpage__left">
 
       <div class="subpage__left_contents">
-        <div class="subpage__left_chapter">Chapter Four</div>
+        <div class="subpage__left_chapter">Chapter Five</div>
         <h1>Linda Anderson Stewart, B.F.A</h1>
         <h2>Fine Art Painter</h2>
 
-        <p>The creation of this website was done by three people; the artist, a graphic designer and a web designer. The artist had a strong vision of how she wanted the site to reflect her work. The graphic designer created the lovely graphics for the site that honored Linda's work.</p>
+        <p>The creation of this website was done by three people; the artist, a graphic designer and a website developer. The artist had a strong vision of how she wanted the site to reflect her work. The graphic designer created the lovely graphics for the site that honored Linda's work and who's mock ups I used to build the responsive site.</p>
 
         <p>Linda Anderson Stewart's website not only showcases her range of work, but also contains information about the artist, lists the galleries she's represented by and highlights upcoming shows of her work.</p>
 
         <p>Her fine art is represented in galleries across Alberta, Canada.</p>
 
-        <p><em>This responsive site was built with a Foundation base and the artist is able to update the content herself with a CMS.</em></p>
-
+        <p><em>The artist updates the content herself with a Content Management System. The homepage has a slide show gallery of her varied works.</em></p>
       </div>
 
 </article>
@@ -32,7 +31,7 @@ description:
 
 <footer>
       <div class="subpage__page_number_hedera">
-            <div>p. 8</div>
+            <div>p. 10</div>
             <button class="top-button" aria-label="Back to top" type="button"><span aria-hidden="true">&#10087</span></button>
       </div>
 </footer>
