--- a/src/pages/prologue_the_first_site.html
+++ b/src/pages/prologue_the_first_site.html
@@ -1,6 +1,6 @@
 ---
-title:
-description:
+title: Prologue; The First Site - where it all started
+description: How I started in website developement and my first professional site
 ---
 
 <article class="subpage__left">
@@ -8,9 +8,9 @@ description:
       <div class="subpage__left_contents">
         <div class="subpage__left_chapter">Prologue</div>
         <h1>The First Site &mdash; where it all started&hellip;</h1>
-        <h2>Shames Mountain, British Columbia Ski Area Co-op</h2>
+        <h2>Shames Mountain, British Columbia Ski Area Co-Op</h2>
 
-        <p class="subpage__left_chapter__paragraph_space">I was taking an advanced web building course in my last semester at the University of Alberta, Canada. We were to make up a company, imagine what issues they might have, and create a proposal with a design mockup and explain how the site would address those issues. I thought, why make up a company? I already know a company to base my proposal on &mdash; the company was Shames Mountain Ski Area. Unbeknownst to me, while I was creating this proposal they had already hired a company to redesign their site. When my course was done I sent the proposal to Shames Mountain just to see if they liked the work. That morning they had received the hired companies proposal and were very disappointed with the results. Then mine arrived. Shortly after, I received a call, &ldquo;this is exactly what we were looking for! Sarah, we want to hire you to rebuild our site.&rdquo; I got to start my first professional job before I had graduated.</p>
+        <p class="subpage__left_chapter__paragraph_space">I was taking an advanced web building course in my last semester at the University of Alberta, Canada. We were to make up a small company, imagine what issues they might have, and create a proposal with a design mockup and explain how the site would address those issues. I thought, why make up a company? I already know a company to base my proposal on &mdash; the company was Shames Mountain Ski Area. Unbeknownst to me, while I was creating this proposal they had already hired a company to redesign their site. When my course was done I sent the proposal to Shames Mountain just to see if they liked the work. That morning they had received the hired companies' proposal and were very disappointed with the results. Then mine arrived. Shortly after, I received a call, &ldquo;this is exactly what we were looking for! Sarah, we want to hire you to rebuild our site.&rdquo; I got to start my first professional job before I had graduated.</p>
 
         <h3>Shames Mountain Ski Area</h3>
         <p>I originally created the site in 2003 and rebuilt it in 2009, pictured here.</p>
@@ -39,7 +39,7 @@ description:
 
 <footer>
       <div class="subpage__page_number_hedera">
-            <div>p. 14</div>
+            <div>p. 16</div>
             <button class="top-button" aria-label="Back to top" type="button"><span aria-hidden="true">&#10087</span></button>
       </div>
 </footer>
