--- a/src/pages/black_market_research_website.html
+++ b/src/pages/black_market_research_website.html
@@ -1,17 +1,18 @@
 ---
-title: Chapter Two; Black Market Research - Indie Rock Band - Website
+title: Chapter; Black Market Research
 description: Site built for the Nashville based band, Black Market Research
 ---
 
 <article class="subpage__left">
 
       <div class="subpage__left_contents">
-        <div class="subpage__left_chapter">Chapter Two</div>
+        <div class="subpage__left_chapter">Chapter</div>
         <h1>Black Market Research</h1>
         <h2>Indie Rock Band</h2>
 
         <p>This site was built for the band, Black Market Research to showcase the band's work and upcoming shows. This was my first responsive design project. I read many articles on the subject, mainly from .Net Magazine and used the methods that appealed to me and delivered the best results. I then researched rock music industry websites of all kinds to learn the visual languages of the sites. I designed two website mock ups that would best reflect the band and the client chose. I designed and built this site with HTML5, CCS3 and responsive design. I designed all visual elements of the site including the navigation. JavaScript by Andrew Clover.</p>
-        <p>Black Market Research formed in 2009, Black Market Research, an Indie/Alt band headquartered in Nashville, TN. Nick Britt - singer, songwriter, guitar. I've been the publicist for the band since it's formation.</p>
+
+        <p>Black Market Research formed in 2009, Black Market Research, an Indie/Alt band headquartered in Nashville, TN. Nick Britt &mdash; singer, songwriter, guitar. I've been the publicist for the band since it's formation.</p>
 
       </div>
 
@@ -27,7 +28,7 @@ description: Site built for the Nashville based band, Black Market Research
 
 <footer>
       <div class="subpage__page_number_hedera">
-            <div>p. 4</div>
+            <div>p.</div>
             <button class="top-button" aria-label="Back to top" type="button"><span aria-hidden="true">&#10087</span></button>
       </div>
 </footer>
