--- a/src/pages/gust_gallery_website.html
+++ b/src/pages/gust_gallery_website.html
@@ -1,5 +1,5 @@
 ---
-title: Chapter Six; Gust Gallery - Website
+title: Chapter Six; Gust Gallery
 description: Background of the Gust Gallery website
 ---
 
@@ -12,7 +12,7 @@ description: Background of the Gust Gallery website
 
         <p>The concept behind the website was to reflect the beauty of the gallery space. It's a lovely peaceful place surrounded by towering mountain tops that just makes you want to linger a little longer. The colors of the site were taken from the gallery it self. The dark brown wooden floors, rich red awning and cream-colored walls. I wanted to keep the navigation and logo area minimal to keep the focus on the works being represented.</p>
 
-        <p>The Gust Gallery is located in the small village in Waterton Lakes National Park. It sits surrounded by the beauty of the Rocky Mountains of Southern Alberta. The unique beauty of the area is reflected in the works of the gallery that are created by artists of the region. The gallery showcases a wide range of mediums, from paintings, scultpures, pottery, glass works, jewelry and more.</p>
+        <p>The Gust Gallery is located in the small village in Waterton Lakes National Park. It sits surrounded by the beauty of the Rocky Mountains of Southern Alberta. The unique beauty of the area is reflected in the works of the gallery that are created by artists of the region. The gallery showcases a wide range of mediums, from paintings, sculptures, pottery, glass works, jewelry and more.</p>
 
         <p><em>This is an older site done in tables that I hope to responsively rebuild in the next few months.</em></p>
       </div>
@@ -29,7 +29,7 @@ description: Background of the Gust Gallery website
 
 <footer>
       <div class="subpage__page_number_hedera">
-            <div>p. 12</div>
+            <div>p. 14</div>
             <button class="top-button" aria-label="Back to top" type="button"><span aria-hidden="true">&#10087</span></button>
       </div>
 </footer>
