--- a/src/pages/peter_raabe_website.html
+++ b/src/pages/peter_raabe_website.html
@@ -1,20 +1,20 @@
 ---
-title:
-description:
+title: Chapter Six; Dr. Peter B. Raabe
+description: Academic website build for a Philosophical Counselor and professor
 ---
 
 <article class="subpage__left">
 
       <div class="subpage__left_contents">
-        <div class="subpage__left_chapter">Chapter Five</div>
+        <div class="subpage__left_chapter">Chapter Six</div>
         <h1>Peter B. Raabe, PH.D.</h1>
         <h2>A Philosophical Counselling Website</h2>
 
-        <p>A professional, academic website to highlight the work of Peter B. Raabe, PH.D. Peter needed a site that his students, collegues and peers could reference. The site contains information about university classes he teaches, papers and books he has pubished,  and speaking engagements to name a few.</p>
+        <p>A professional, academic website to highlight the work of Peter B. Raabe, PH.D. Peter needed a site that his students, colleagues and peers could reference. The site contains information about the classes he teaches at the University of the Fraser Valley in British Columbia, Canada. As well as his numerous published books, articles and speaking engagements.</p>
 
-        <p>I created a clean site that was easy to navigation the many topics with a focus on typograghy. I ensured the pages would print well if needed.</p>
+        <p>I created a clean site that was easy to navigate to the many topics with a focus on typography. I ensured the pages would print well if needed.</p>
 
-        <p><em>This is an older site done in tables that I will be updating to responsive in the next few months.</em></p>
+        <p><em>This is an older site done in tables that I will be updating to responsive and CSS Grid in the next few months.</em></p>
       </div>
 
 </article>
@@ -29,7 +29,7 @@ description:
 
 <footer>
       <div class="subpage__page_number_hedera">
-            <div>p. 10</div>
+            <div>p. 12</div>
             <button class="top-button" aria-label="Back to top" type="button"><span aria-hidden="true">&#10087</span></button>
       </div>
 </footer>
