--- a/src/pages/sitemap.html
+++ b/src/pages/sitemap.html
@@ -1,6 +1,6 @@
 ---
-title:
-description:
+title: Table of Contents - Sitemap
+description: Sitemap; list of all page links of the site
 ---
 
 <article class="subpage__left sitemap">
@@ -25,7 +25,7 @@ description:
 
 <footer>
       <div class="subpage__page_number_hedera">
-            <div>p. 16</div>
+            <div>p. 18</div>
             <button class="top-button" aria-label="Back to top" type="button"><span aria-hidden="true">&#10087</span></button>
       </div>
 </footer>
