--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -19,7 +19,7 @@ layout: home
 
             <a href="index.html" class="home__image_link"><img src="{{root}}/assets/img/mountains_me_text.jpg" alt="Journey onward"></a>
 
-            <div class="cover">
+            <div class="cover" id="main_content" role="main">
                 <h1 class="home__title"><span>S</span>tories<br />of a<br /><span>W</span>ebsite <span>D</span>eveloper</h1>
 
                 <div class="home__menu_title_list">
