--- a/src/pages/linda_anderson_stewart_website.html
+++ b/src/pages/linda_anderson_stewart_website.html
@@ -1,12 +1,14 @@
 ---
 title: Chapter Five; Linda Anderson Stewart, B.F.A - Fine Art Painter
 description: Background into the building of the painters' website
+chapter_number: Five
+page_number: 10
 ---
 
 <article class="subpage__left">
 
       <div class="subpage__left_contents">
-        <div class="subpage__left_chapter">Chapter Five</div>
+        <div class="subpage__left_chapter" id="main_content" role="main">Chapter {{chapter_number}}</div>
         <h1>Linda Anderson Stewart, B.F.A</h1>
         <h2>Fine Art Painter</h2>
 
@@ -29,9 +31,4 @@ description: Background into the building of the painters' website
 
 </aside>
 
-<footer>
-      <div class="subpage__page_number_hedera">
-            <div>p. 10</div>
-            <button class="top-button" aria-label="Back to top" type="button"><span aria-hidden="true">&#10087</span></button>
-      </div>
-</footer>
+{{> footer}}
