--- a/src/pages/sitemap.html
+++ b/src/pages/sitemap.html
@@ -1,12 +1,13 @@
 ---
 title: Table of Contents - Sitemap
 description: Sitemap; list of all page links of the site
+page_number: 18
 ---
 
 <article class="subpage__left sitemap">
 
       <div class="subpage__left_contents">
-        <div class="subpage__left_chapter">Table of Contents</div>
+        <div class="subpage__left_chapter" id="main_content" role="main">Table of Contents</div>
 
         <ul class="home__menu_list" id="sitemap_menu">
           {{> menu}}
@@ -23,9 +24,4 @@ description: Sitemap; list of all page links of the site
 
 </aside>
 
-<footer>
-      <div class="subpage__page_number_hedera">
-            <div>p. 18</div>
-            <button class="top-button" aria-label="Back to top" type="button"><span aria-hidden="true">&#10087</span></button>
-      </div>
-</footer>
+{{> footer}}
