--- a/src/pages/bert_riggall_website.html
+++ b/src/pages/bert_riggall_website.html
@@ -1,12 +1,14 @@
 ---
 title: Chapter Four; Bert Riggall's Greater Waterton
 description: Creation of the website for the book, Bert Riggall's Greater Waterton
+chapter_number: Four
+page_number: 8
 ---
 
             <article class="subpage__left">
 
                   <div class="subpage__left_contents">
-                    <div class="subpage__left_chapter">Chapter Four</div>
+                    <div class="subpage__left_chapter" id="main_content" role="main">Chapter {{chapter_number}}</div>
                     <h1>Bert Riggall's Greater Waterton, <br />A Conservation Legacy</h1>
                     <h2>Book</h2>
 
@@ -29,9 +31,4 @@ description: Creation of the website for the book, Bert Riggall's Greater Watert
 
             </aside>
 
-            <footer>
-                  <div class="subpage__page_number_hedera">
-                        <div>p. 8</div>
-                        <button class="top-button" aria-label="Back to top" type="button"><span aria-hidden="true">&#10087</span></button>
-                  </div>
-            </footer>
+            {{> footer}}
