--- a/src/pages/black_market_research_website.html
+++ b/src/pages/black_market_research_website.html
@@ -1,12 +1,14 @@
 ---
 title: Chapter; Black Market Research
 description: Site built for the Nashville based band, Black Market Research
+chapter_number:
+page_number:
 ---
 
 <article class="subpage__left">
 
       <div class="subpage__left_contents">
-        <div class="subpage__left_chapter">Chapter</div>
+        <div class="subpage__left_chapter" id="main_content" role="main">Chapter {{chapter_number}}</div>
         <h1>Black Market Research</h1>
         <h2>Indie Rock Band</h2>
 
@@ -26,9 +28,4 @@ description: Site built for the Nashville based band, Black Market Research
 
 </aside>
 
-<footer>
-      <div class="subpage__page_number_hedera">
-            <div>p.</div>
-            <button class="top-button" aria-label="Back to top" type="button"><span aria-hidden="true">&#10087</span></button>
-      </div>
-</footer>
+{{> footer}}
