--- a/src/pages/gust_gallery_website.html
+++ b/src/pages/gust_gallery_website.html
@@ -1,12 +1,14 @@
 ---
-title: Chapter Six; Gust Gallery
+title: Chapter Seven; Gust Gallery
 description: Background of the Gust Gallery website
+chapter_number: Seven
+page_number: 14
 ---
 
 <article class="subpage__left">
 
       <div class="subpage__left_contents">
-        <div class="subpage__left_chapter">Chapter Six</div>
+        <div class="subpage__left_chapter" id="main_content" role="main">Chapter {{chapter_number}}</div>
         <h1>Gust Gallery, Fine Arts</h1>
         <h2>Gallery in Waterton Lakes National Park</h2>
 
@@ -27,9 +29,4 @@ description: Background of the Gust Gallery website
 
 </aside>
 
-<footer>
-      <div class="subpage__page_number_hedera">
-            <div>p. 14</div>
-            <button class="top-button" aria-label="Back to top" type="button"><span aria-hidden="true">&#10087</span></button>
-      </div>
-</footer>
+{{> footer}}>
