--- a/src/pages/prologue_the_first_site.html
+++ b/src/pages/prologue_the_first_site.html
@@ -1,12 +1,13 @@
 ---
 title: Prologue; The First Site - where it all started
 description: How I started in website developement and my first professional site
+page_number: 16
 ---
 
 <article class="subpage__left">
 
       <div class="subpage__left_contents">
-        <div class="subpage__left_chapter">Prologue</div>
+        <div class="subpage__left_chapter" id="main_content" role="main">Prologue</div>
         <h1>The First Site &mdash; where it all started&hellip;</h1>
         <h2>Shames Mountain, British Columbia Ski Area Co-Op</h2>
 
@@ -37,9 +38,4 @@ description: How I started in website developement and my first professional sit
 
 </aside>
 
-<footer>
-      <div class="subpage__page_number_hedera">
-            <div>p. 16</div>
-            <button class="top-button" aria-label="Back to top" type="button"><span aria-hidden="true">&#10087</span></button>
-      </div>
-</footer>
+{{> footer}}
