--- a/src/pages/ps_websites_built_for_financial_institutions.html
+++ b/src/pages/ps_websites_built_for_financial_institutions.html
@@ -1,12 +1,14 @@
 ---
 title: Chapter Two; ProfitStars - Websites Built for Banking and Financial Institutions
 description: Details my work responsiblities and latest work produced while at ProfitStars
+chapter_number: Two
+page_number: 4
 ---
 
             <article class="subpage__left">
 
                   <div class="subpage__left_contents">
-                    <div class="subpage__left_chapter">Chapter Two</div>
+                    <div class="subpage__left_chapter" id="main_content" role="main">Chapter {{chapter_number}}</div>
                     <h1>ProfitStars</h1>
                     <h2>Building Websites for Banking &amp; Financial Institutions</h2>
 
@@ -32,9 +34,4 @@ description: Details my work responsiblities and latest work produced while at P
 
             </aside>
 
-            <footer>
-                  <div class="subpage__page_number_hedera">
-                        <div>p. 4</div>
-                        <button class="top-button" aria-label="Back to top" type="button"><span aria-hidden="true">&#10087</span></button>
-                  </div>
-            </footer>
+            {{> footer}}
