Updated the numbering of nav so that Title Page does not have a Chapter Number. Updated resume pdf.

--- a/src/pages/sitemap.html
+++ b/src/pages/sitemap.html
@@ -9,9 +9,14 @@ page_number: 18
       <div class="subpage__left_contents">
         <div class="subpage__left_chapter" id="main_content" role="main">Table of Contents</div>
 
-        <ul class="home__menu_list" id="sitemap_menu">
+        <ol class="home__menu_list" id="sitemap_menu">
+          <ul class="menu_list__first_item">
+            <li>
+              <a href="{{root}}/index.html">Title Page</a>
+            </li>
+          </ul>
           {{> menu}}
-        </ul>
+        </ol>
       </div>
 
 </article>
