Added BMR page to site
Added BMR page to site and update corresponding page and chapter numbers.

--- a/src/pages/black_market_research_website.html
+++ b/src/pages/black_market_research_website.html
@@ -1,8 +1,8 @@
 ---
-title: Chapter; Black Market Research
+title: Chapter Five; Black Market Research
 description: Site built for the Nashville based band, Black Market Research
-chapter_number:
-page_number:
+chapter_number: Five
+page_number: 10
 ---
 
 <article class="subpage__left">
@@ -10,11 +10,13 @@ page_number:
       <div class="subpage__left_contents">
         <div class="subpage__left_chapter" id="main_content" role="main">Chapter {{chapter_number}}</div>
         <h1>Black Market Research</h1>
-        <h2>Indie Rock Band</h2>
+        <h2>Nashville Indie Rock Band</h2>
 
-        <p>This site was built for the band, Black Market Research to showcase the band's work and upcoming shows. This was my first responsive design project. I read many articles on the subject, mainly from .Net Magazine and used the methods that appealed to me and delivered the best results. I then researched rock music industry websites of all kinds to learn the visual languages of the sites. I designed two website mock ups that would best reflect the band and the client chose. I designed and built this site with HTML5, CCS3 and responsive design. I designed all visual elements of the site including the navigation. JavaScript by Andrew Clover.</p>
+        <p>The site was built for the band, Black Market Research, to showcase the band's albums and upcoming shows. In October of 2019 I completed the redesign and built of this site to modernize the design and it's code. I wanted to create a simple, minimalist, site design to keep it uncluttered and create an ease of flow between content.</p>
 
-        <p>Black Market Research formed in 2009, Black Market Research, an Indie/Alt band headquartered in Nashville, TN. Nick Britt &mdash; singer, songwriter, guitar. I've been the publicist for the band since it's formation.</p>
+        <p>The original site was built back in 2012 and was my first responsive design project. At the time I read many articles on the subject and used the methods that appealed to me and delivered the best results. I then researched rock music industry websites of all kinds to learn the visual languages of the sites. I designed and built this site with HTML5, CCS3 and responsive design.</p>
+
+        <p>Black Market Research formed in 2009, Black Market Research, an Indie/Alt band headquartered in Nashville, TN. Nick Britt &mdash; singer, songwriter, guitar. I've been the social media manager since it's formation. I now keep the site maintained.</p>
 
       </div>
 
@@ -23,7 +25,7 @@ page_number:
 <aside class="subpage__right">
 
       <div class="subpage__right_contents">
-            <a href="http://www.blackmarketresearch.net/"><img src="{{root}}/assets/img/" alt="Website of Black Market Research">BlackMarketResearch.net</a>
+            <a href="https://www.blackmarketresearch.net/"><img src="{{root}}/assets/img/black_market_research_aboutpage_Oct_20109.png" alt="Website of Black Market Research">BlackMarketResearch.net</a>
       </div>
 
 </aside>
