--- a/src/pages/linda_anderson_stewart_website.html
+++ b/src/pages/linda_anderson_stewart_website.html
@@ -1,8 +1,8 @@
 ---
-title: Chapter Five; Linda Anderson Stewart, B.F.A - Fine Art Painter
+title: Chapter Six; Linda Anderson Stewart, B.F.A - Fine Art Painter
 description: Background into the building of the painters' website
-chapter_number: Five
-page_number: 10
+chapter_number: Six
+page_number: 12
 ---
 
 <article class="subpage__left">
