--- a/src/pages/peter_raabe_website.html
+++ b/src/pages/peter_raabe_website.html
@@ -1,8 +1,8 @@
 ---
-title: Chapter Six; Dr. Peter B. Raabe
+title: Chapter Seven; Dr. Peter B. Raabe
 description: Academic website build for a Philosophical Counselor and professor
-chapter_number: Six
-page_number: 12
+chapter_number: Seven
+page_number: 14
 ---
 
 <article class="subpage__left">
