--- a/src/pages/gust_gallery_website.html
+++ b/src/pages/gust_gallery_website.html
@@ -1,8 +1,8 @@
 ---
-title: Chapter Seven; Gust Gallery
+title: Chapter Eight; Gust Gallery
 description: Background of the Gust Gallery website
-chapter_number: Seven
-page_number: 14
+chapter_number: Eight
+page_number: 16
 ---
 
 <article class="subpage__left">
