Updates to text for Introduction. Started Accessibility Helper and moved start of homepage animation to partial

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,21 +6,10 @@ layout: home
         <div class="home__left_side"></div>
         <div class="home__base">
 
-            <!-- <div class="parallax_figure"></div>
-
-            <div class="parallax_ground"></div>
-
-            <div class="parallax_water"></div>
-
-            <div class="parallax_mountains"></div>
-
-            <div class="parallax_sky"></div> -->
-
-
             <a href="index.html" class="home__image_link"><img src="{{root}}/assets/img/mountains_me_text.jpg" alt="Journey onward"></a>
 
             <div class="cover" id="main_content" role="main">
-                <h1 class="home__title"><span>S</span>tories<br />of a<br /><span>W</span>ebsite <span>D</span>eveloper</h1>
+                <h1 class="home__title"><span>S</span>tories<br />of a<br /><span>W</span>eb <span>D</span>eveloper</h1>
 
                 <div class="home__menu_title_list">
                     <h2>Chapters</h2>
@@ -29,5 +18,6 @@ layout: home
                         </ol>
                 </div>
             </div>
+
         </div>
     </div>
