--- a/src/pages/introduction_sarah_k_russell.html
+++ b/src/pages/introduction_sarah_k_russell.html
@@ -1,6 +1,6 @@
 ---
 title: Chapter One; Introduction to the Website Developer; Sarah K. Russell
-description: The inspiration for this website build. How I became a wedsite developer over 16 years ago at the University of Alberta
+description: The inspiration for this website build. How I became a wedsite developer over a decade ago at the University of Alberta
 chapter: One
 page_number: 2
 ---
@@ -12,9 +12,9 @@ page_number: 2
             <h1>Introduction to the<br />Website Developer;</h1>
             <h2>Sarah K. Russell</h2>
 
-            <p>I have been learning and working professionally building websites over 16 years. I say, learning, because this wonderful industry is always coming up with new and better ways of building websites. To build websites is to be constantly learning new things and finding how you can best apply them. All the while making sure you give the user the best experience you can. It is the perfect industry for someone always looking for a fun new challenge. Within my 16 years I have relearned how to build websites with the big changes we've experience; tables and fixed width to floating divs, responsive building and mobile first to the newest innovation we get to play with today &mdash; CSS Flexbox and CSS Grid.</p>
+            <p>I fell in love with web development in my last year at the University of Alberta, Canada.  I signed up for Web Design when I needed one more studio course to complete my Bachelor of Design.  Before I knew it, I was at the top of my class!  It all just clicked.  With this thrilling discovery, my career was shaped from that day forward.</p>
 
-            <p>I fell in love with web development in my last year at the University of Alberta, Canada. I needed an extra studio course to complete my Fine Arts &mdash; Visual Communications Design Degree and signed up. Before I knew it, I was at the top of my class! It all just clicked. I had found these new and ever changing languages to love.</p>
+            <p>For over a decade, I have been working professionally building websites.  To develop websites is to be continually learning new things and discovering how best to apply them.  This fantastic industry is always coming up with new and better ways of building websites.  All the while, making sure you give the user the best experience you can.  It is the perfect industry for someone like myself, who is always looking for a fun new challenge and who loves continued learning.  Within my years, I have relearned how to build websites with the significant changes we've experienced; tables and fixed-width, floats, responsive building and mobile-first, and now CSS Flexbox and Grid.</p>
       </div>
 
 </article>
@@ -30,9 +30,9 @@ page_number: 2
         <p><em>This mobile first, responsive site was built with a Foundation base, the homepage is a Flexbox layout while the interior page layout was more suited to CSS Grid. SEO optimized and AA ADA compliant.</em></p>
 
         <ul class="subpage__right_contents_list">
-          <li><p>Contact: <a href="mailto:info@skrdesign.com?subject=Inquiry%20From%20SKRDesign%20Site">info@skrdesign.com</a></p></li>
-          <li><p><a href="https://www.linkedin.com/in/sarah-russell-a133049">LinkedIn profile</a></p></li>
-          <li><p><a href="{{root}}assets/img/Sarah_K_Russell_Front-End_Website_Developer_Resume.pdf" target="_blank">PDF Resume</a>.</p></li>
+          <li><p>Contact me at <a href="mailto:info@skrdesign.com?subject=Inquiry%20From%20SKRDesign%20Site">info@skrdesign.com</a>.</p></li>
+          <li><p>Connect with me on <a href="https://www.linkedin.com/in/sarahkrussell">LinkedIn</a>.</p></li>
+          <li><p>Resume &mdash; format <a href="{{root}}assets/img/Sarah_K_Russell_Web_Developer_Resume.pdf" target="_blank">PDF</a>, <a href="{{root}}assets/img/Sarah_K_Russell_Web_Developer_Resume.docx" target="_blank">Word</a>.</p></li>
         </ul>
 
 
