--- a/src/pages/prologue_the_first_site_with_timothy.html
+++ b/src/pages/prologue_the_first_site_with_timothy.html
@@ -16,6 +16,13 @@ page_number: 12
         <h3>Shames Mountain Ski Area</h3>
         <p>I originally created the site in 2003 and rebuilt it in 2009, pictured here.</p>
         <p>The concept for the Shame website came from the key features of the ski area that management wanted to focus on for the Winter Season of 2009; the fact that they receive some of the most snowfall in North America, and that they are a &ldquo;Jewel of the Wilds.&rdquo; From these two ideas I came up with the look of all the main features of the site being topped with snow. I used this theme to influence my choices of colors, style and shapes. This carries through to the individual pages as well, whose titles are snow capped. </p>
+        <p class="subpage__left_chapter__paragraph_space">Shames Mountain is located in the northern portion of British Columbia, sitting amongst the beauty of the Coastal mountain range, this range has them, &ldquo;blessed by the snow gods.&rdquo; Shames Mountain has a full spectrum of trails to explore as well as easy access to their storied backcountry terrain.</p>
+
+
+        <h3>Mt.Timothy Ski Area</h3>
+        <p>I was lucky enough to build two ski area sites! Mt.Timothy really liked my work on Shames Mountain and hired me to redesign and build their site in 2008.</p>
+        <p>The concept for the Ski Timothy site began with the need to modernize the site. I started as always with the colors, picking blue being representative of snow and orange symbolizing active sport. I then modernized the logo by turning it into a crest and restyling it. The logo then shaped the look of the rest of the site, a clean open looking site.</p>
+        <p>Mt.Timothy is a ski area located in South Cariboo, in the heart of British Columbia. Experience the unhurried, unworried, feeling of the friendly Cariboo. Enjoy the sunny skies and pristine Cariboo snow that Mt. Timothy offers along with exceptional value, small crowds, and a relaxed, friendly atmosphere. The South Cariboo abounds with natural beauty and is a wonderland for all kinds of sport, winter or summer.</p>
       </div>
 
 </article>
@@ -23,7 +30,10 @@ page_number: 12
 <aside class="subpage__right">
 
       <div class="subpage__right_contents">
-            <img src="{{root}}/assets/img/Shamesh.png" alt="Website Trail Map page of Shames Mountain"><img src="{{root}}/assets/img/ShamesTrail.png" alt="Website homepage of Shames Mountain" class="subpage__right_contents__image_space" id="second_image">
+            <img src="{{root}}/assets/img/Shamesh.png" alt="Website Trail Map page of Shames Mountain"><img src="{{root}}/assets/img/ShamesTrail.png" alt="Website homepage of Shames Mountain" class="subpage__right_contents__image_space">
+
+            <img src="{{root}}/assets/img/timothyh.jpg" alt="Website homepage of Mt.Timothy Ski Area">
+
       </div>
 
 </aside>
