--- a/src/pages/ps_websites_built_for_financial_institutions.html
+++ b/src/pages/ps_websites_built_for_financial_institutions.html
@@ -12,9 +12,9 @@ page_number: 4
                     <h1>ProfitStars</h1>
                     <h2>Building Websites for Banking &amp; Financial Institutions</h2>
 
-                    <p>Advanced Web Builder at <a href="https://www.profitstars.com/online-and-mobile/web-solutions/pages/design-and-hosting.aspx">ProfitStars</a> from January 2014 to April 2019. Our department, Web Solutions, provide website design, responsively and ADA compliant built websites, hosting, and content management for banking and financial institutions. We work both in a team and individually on our website projects. Each site was assigned a team; a project coordinator, designer and builder. The project coordinator worked with the client and the team to set deadlines for tasks, starting with the design of the site.</p>
+                    <p>Advanced Web Developer at <a href="https://www.profitstars.com/online-and-mobile/web-solutions/pages/design-and-hosting.aspx">ProfitStars, a Jack Henry &amp; Associates Company</a>, in the Fintech industy for five years. The Web Solutions department provided website design, responsively and ADA compliant built websites, hosting, and content management for banking and financial institutions. Each site was assigned a project team comprised of a project coordinator, designer and developer.</p>
 
-                    <p>Once the designer had completed their tasks and the it was approved by the client, the website builder (myself) was provided Adobe Illustrator files of the site mockups and would then built the site in HTML, CSS and JavaScript with either a Foundation or Bootstrap base. When building website I was also responsible for building to ADA standards, SEO optimize, cross browser and device testing. Once tested and completed the website are added to a content management system within project timelines.</p>
+                    <p>The designer provided the website developer Adobe Illustrator files of the site mockups and wireframes. I would then use them to build the site in HTML, CSS and JavaScript with a Bootstrap base to pixel perfectly match the mockups. Responsible for building to ADA standards, SEO optimize, cross browser and device testing. Once tested and completed the website were added to a content management system within project timelines.</p>
 
                     <p><em>The sites shown are the property of the bank.</em></p>
                     <a href="https://www.missionbank.com/" class="subpage__left_side_image"><img src="{{root}}/assets/img/Mission_Bank.png" alt="Mission Bank">MissionBank.com</a>
@@ -29,7 +29,8 @@ page_number: 4
             <aside class="subpage__right">
 
                   <div class="subpage__right_contents" id="current_images">
-                        <a href="https://www.centralbankkc.com/"><img src="{{root}}/assets/img/central_bank_of_kansas_city_homepage_desktop_1.jpg" alt="Central Bank of Kansas City">Central Bank of Kansas City:<br />built responsive, mobile first, with a parallax effect on the homepage. Completed in April 2019.</a>
+                        <p> Last custom build at ProfitStars, completed in April 2019.</p>
+                        <a href="https://www.centralbankkc.com/"><img src="{{root}}/assets/img/central_bank_of_kansas_city_homepage_desktop_1.jpg" alt="Central Bank of Kansas City">Central Bank of Kansas City</a>
                   </div>
 
             </aside>
