Updated the text for all current use pages

--- a/src/pages/black_market_research_website.html
+++ b/src/pages/black_market_research_website.html
@@ -11,13 +11,9 @@ page_number: 10
         <div class="subpage__left_chapter" id="main_content" role="main">Chapter {{chapter_number}}</div>
         <h1>Black Market Research</h1>
         <h2>Nashville Indie Rock Band</h2>
+        <p>The site was built for the band, Black Market Research, to showcase the bands' albums and upcoming shows.  The original site was built back in 2012 and was my first responsive design project.  At the time, I read many articles on the subject and used the methods that appealed to me and delivered the best results.  I then researched rock music industry websites of all kinds to learn the visual languages of the sites.</p>
 
-        <p>The site was built for the band, Black Market Research, to showcase the band's albums and upcoming shows. In October of 2019 I completed the redesign and built of this site to modernize the design and it's code. I wanted to create a simple, minimalist, site design to keep it uncluttered and create an ease of flow between content.</p>
-
-        <p>The original site was built back in 2012 and was my first responsive design project. At the time I read many articles on the subject and used the methods that appealed to me and delivered the best results. I then researched rock music industry websites of all kinds to learn the visual languages of the sites. I designed and built this site with HTML5, CCS3 and responsive design.</p>
-
-        <p>Black Market Research formed in 2009, Black Market Research, an Indie/Alt band headquartered in Nashville, TN. Nick Britt &mdash; singer, songwriter, guitar. I've been the social media manager since it's formation. I now keep the site maintained.</p>
-
+        <p>In 2019, I completed the redesign and build of this site to modernize the design and its code.  I wanted to create a simple, minimalist, site design to keep it uncluttered and create an ease of flow between content.</p>
       </div>
 
 </article>
