--- a/src/pages/foothill_flyers_disc_golf_club.html
+++ b/src/pages/foothill_flyers_disc_golf_club.html
@@ -12,11 +12,11 @@ page_number: 6
                     <h1>Foothill Flyers</h1>
                     <h2>Colorado Disc Golf Club</h2>
 
-                    <p>The site is place for the local disc golf club to post information about their annual events, biweekly tags matches and bring attention to the amazing local courses that they have access to.</p>
+                    <p>The website is a place for the local disc golf club to post information about their annual events, biweekly tags matches and bring attention to the fantastic local courses they access.</p>
 
-                    <p>I wanted the site to be fun and informative. The site was designed to be easy to navigate on mobile and desktop. We get a lot of sun in Colorado and the blue sky main color was representative of this.</p>
+                    <p>I wanted the site to be fun and informative.  I designed the website to be easy to navigate on mobile and desktop.  We get a lot of sun in Colorado, and the primary color, sky blue, was representative of this.</p>
 
-                    <p><em>I did the design and built for this site. Mobile first, responsive, ADA and SEO optimized site that was built using CSS Grid and minimal JavaScript. Parallax homepage, image gallery and sticky navigation. Completed August 2019.</em></p>
+                    <p><em>Built in 2019.</em></p>
                   </div>
 
             </article>
