--- a/src/pages/introduction_sarah_k_russell.html
+++ b/src/pages/introduction_sarah_k_russell.html
@@ -23,11 +23,11 @@ page_number: 2
 
       <div class="subpage__right_contents" id="right_contents_text">
         <h3>This Site</h3>
-        <p>Growing up in South Carolina there was a small, three room library just down the block from our house. This was before the internet, so when I wanted to learn about something, I would run down to the library and dive into all the books I could get my hands on whatever new subject had tickled my fancy. This eagerness to jump into new areas of interest would eventually lead me to make a connection with the internet and build my career around it. The internet allows anyone to access information on anything - it's just as precious to me now as my little blue library card was to me all those years ago.</p>
+        <p>Growing up in South Carolina, there was a small three-room library just down the block from our house. This was before the internet, so when I wanted to learn about something, I would run down to the library and dive into all the books I could get my hands on whatever new subject had tickled my fancy that week. This eagerness to jump into new areas of interest would eventually lead me to make a connection with the internet and build my career around it. The internet allows anyone to access information on anything &mdash; it is just as precious to me now as my little blue library card was to me all those years ago.</p>
 
-        <p>In 2019 this portfolio site has been rebuilt to pay homage to those days in the library surrounded by glorious &mdash; books. Books and websites are very much the same &mdash; a medium for information or telling a story. The site format allowed me to focus on the graphic design of the page structure with a emphasis on typography.</p>
+        <p>In 2019, this portfolio site was rebuilt to pay homage to those days in the library surrounded by glorious &mdash; books. Books and websites are very much the same &mdash; a medium for information or telling a story. The site format allowed me to focus on the graphic design of the page structure with an emphasis on typography.</p>
 
-        <p><em>This mobile first, responsive site was built with a Foundation base, the homepage is a Flexbox layout while the interior page layout was more suited to CSS Grid. SEO optimized and AA ADA compliant.</em></p>
+        <p><em>The homepage is a CSS Flexbox layout while the interior page layout was more suited to CSS Grid. SEO optimized and ADA / Section 508 compliant.</em></p>
 
         <ul class="subpage__right_contents_list">
           <li><p>Contact me at <a href="mailto:info@skrdesign.com?subject=Inquiry%20From%20SKRDesign%20Site">info@skrdesign.com</a>.</p></li>
