--- a/src/pages/ps_websites_built_for_financial_institutions.html
+++ b/src/pages/ps_websites_built_for_financial_institutions.html
@@ -12,9 +12,9 @@ page_number: 4
                     <h1>ProfitStars</h1>
                     <h2>Building Websites for Banking &amp; Financial Institutions</h2>
 
-                    <p>Advanced Web Developer at <a href="https://www.profitstars.com/online-and-mobile/web-solutions/pages/design-and-hosting.aspx">ProfitStars, a Jack Henry &amp; Associates Company</a>, in the Fintech industy for five years. The Web Solutions department provided website design, responsively and ADA compliant built websites, hosting, and content management for banking and financial institutions. Each site was assigned a project team comprised of a project coordinator, designer and developer.</p>
+                    <p>Advanced Web Developer at <a href="https://www.profitstars.com/online-and-mobile/web-solutions/pages/design-and-hosting.aspx">ProfitStars, a Jack Henry &amp; Associates Company</a>, in the Fintech industy.  Built over 90 banking and financial institution websites over five years.  Part of the Web Solutions Department that provided website design, responsively and ADA compliant built websites, hosting, and content management.</p>
 
-                    <p>The designer provided the website developer Adobe Illustrator files of the site mockups and wireframes. I would then use them to build the site in HTML, CSS and JavaScript with a Bootstrap base to pixel perfectly match the mockups. Responsible for building to ADA standards, SEO optimize, cross browser and device testing. Once tested and completed the website were added to a content management system within project timelines.</p>
+                    <p>The designer provided me with Adobe Illustrator files of the site mockups and wireframes.  I built the site in HTML, CSS, JavaScript with a Bootstrap base to pixel perfectly match the mockups.  Responsible for building to ADA / Section 508 standards, SEO optimized, cross-browser/device tested.  Once completed the website was added to a content management system within project timelines.</p>
 
                     <p><em>The sites shown are the property of the bank.</em></p>
                     <a href="https://www.missionbank.com/" class="subpage__left_side_image"><img src="{{root}}/assets/img/Mission_Bank.png" alt="Mission Bank">MissionBank.com</a>
